@@ -38,6 +38,7 @@
 19. Map more KDE4 icons.
 20. When drawing arrows (such as in KDE4 colour selector), assume the arrow is
     enabled.
+21. Style KCapacityBar - draw this as if it is a progressbar.
 
 0.61.5
 ------
